# Mancala-Rust

./: Cargo.toml  README.md  index.html
src/: game.rs  lib.rs  main.rs
src/frontend/: mod.rs
src/frontend/components/: board.rs
src/frontend/pages/: home.rs
static/: style.css
